...
            android:id="@+id/albumSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/heyya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add"
            android:background="@drawable/mybutton"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:background="@drawable/mybutton"/>
    </LinearLayout>
</LinearLayout>

