<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="170dp"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/album_items"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/buttonInApp"
        android:id="@+id/relative_layout">
        <Button
            android:layout_width="50dp"
            android:layout_height ="50dp"
            android:text="X"
            android:textStyle="bold"
            android:textSize="18sp"
...
            android:layout_height="170dp"
            android:id="@+id/album_image"
            android:src="@mipmap/ic_launcher"/>
        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/album_name"
            android:layout_alignParentBottom="true"
            android:text="Album"
            android:textColor="@color/textColorPrimary"
            android:singleLine="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
...
